<resources>
    <string name="app_name">GG</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Register failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="game_name">Name</string>
    <string name="game_desc">Description:</string>
    <string name="game_score">Score:</string>
    <string name="game_genre">Genre:</string>
    <string name="emName">No Name</string>
    <string name="emGenre">No Genre</string>
    <string name="emScore">No Score</string>
    <string name="emDesc">No Description</string>
    <string name="game_comm">Comments</string>
    <string name="log_out">Log Out</string>
</resources>

