<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context=".ui.newGame.CreateNewGame"
    tools:ignore="ContentDescription,MissingConstraints">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/game_name"
        android:layout_width="315dp"
        android:layout_height="90dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/game_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="315dp"
            android:layout_height="66dp"
            android:hint="@string/game_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Button to pick image-->

    <ImageView
        android:id="@+id/game_image"
        android:layout_width="177dp"
        android:layout_height="164dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_image_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262"
        app:srcCompat="@android:drawable/picture_frame" />

    <Button
        android:id="@+id/img_pick_btn"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="136dp"
        android:layout_height="39dp"
        android:text="Choose Image"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/game_genre"
        android:layout_width="120dp"
        android:layout_height="68dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.224">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/game_genre" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/game_score"
        android:layout_width="117dp"
        android:layout_height="75dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.86"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.362">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:hint="@string/game_score" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/game_desc"
        android:layout_width="364dp"
        android:layout_height="156dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/game_desc" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/update_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update Game"
        android:textColor="@color/cardview_light_background"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919" />
</androidx.constraintlayout.widget.ConstraintLayout>